# skynet-review

./: .gitignore  LICENSE  README.md  SkynetReview.slnx
.github/workflows/: build-and-test.yml
src/: .dockerignore  docker-compose.yml
src/Cli/: Cargo.toml  test.cs
src/Cli/src/: api_client.rs  git.rs  main.rs  models.rs  output.rs
src/FileService/: Dockerfile  Program.cs  SkynetReview.FileService.csproj  SkynetReview.FileService.http  appsettings.json
src/FileService/Properties/: launchSettings.json
src/FileService/Services/: FileManager.cs  FileStorageOptions.cs  IFileManager.cs
src/Gateway/: Dockerfile  Program.cs  SkynetReview.Gateway.csproj  SkynetReview.Gateway.http  appsettings.json
src/Gateway/Properties/: launchSettings.json
src/Gateway/Services/: AgentOrchestrator.cs  IAgentOrchestrator.cs  ServiceEndpoints.cs
src/SecurityAgent/: Dockerfile  Program.cs  SkynetReview.SecurityAgent.csproj  SkynetReview.SecurityAgent.http  appsettings.json  security-rules.yml
src/SecurityAgent/Configuration/: SecurityRulesConfig.cs
src/SecurityAgent/Services/: ISecurityAnalyzer.cs  SecurityAnalyzer.cs
src/Shared/Models/: AnalysisRequest.cs  AnalysisResult.cs  SecurityFinding.cs  SecurityRule.cs  Severity.cs  UploadResult.cs
tests/SkynetReview.SecurityAgent.Tests/: SkynetReview.SecurityAgent.Tests.csproj
tests/SkynetReview.SecurityAgent.Tests/Services/: SecurityAnalyzerTests.cs
